General code cleanup with find bugs.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk@1829 6771e1e2-0f46-0410-b5d7-d846ff89f743